--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ langchain-openai
 langchain-community
 chromadb
 sentence-transformers
+protobuf==3.20.3
+chromadb==0.4.24
+opentelemetry-exporter-otlp-proto-grpc==1.22.0
