--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 streamlit
 openai
 langchain
-langchain-openai
-langchain-community
-chromadb
-sentence-transformers
-protobuf==3.20.3
 chromadb==0.4.24
+protobuf==3.20.3
 opentelemetry-exporter-otlp-proto-grpc==1.22.0
+langchain-community
+gspread
+pandas
