--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ chromadb==0.4.24
 protobuf==3.20.3
 opentelemetry-exporter-otlp-proto-grpc==1.22.0
 langchain-community
+sentence-transformers
 gspread
 pandas
+numpy==1.24.4   # ← ここを追加！
